# cars-ontology-app

./: README.md  docker-compose.yml
cars_ontology_app/: Dockerfile  README.md  db.sqlite3  manage.py  package-lock.json  pyproject.toml  tailwind.config.js
cars_ontology_app/app/: urls.py  views.py
cars_ontology_app/app/services/: sparql_queries.py
cars_ontology_app/cars_ontology_app/: asgi.py  settings.py  urls.py  wsgi.py
cars_ontology_app/static/: output.css
cars_ontology_app/templates/app/: home.html
fuseki_server/: Dockerfile  cars_ont.ttl  load_data.sh
fuseki_server/run/configuration/: cars-ontology.ttl
fuseki_server/run/system_files/: 0ac06176-de60-49ee-a337-bbb1381ad23e  115c8bd0-2f69-477d-907c-89e82febf608  1ca37c44-0d1f-4f2f-af64-3aba7ea5c501  419e99d4-88d7-4ec3-b28d-833126131da4  51608f77-8532-44eb-b28a-609a94661c3e  5243c179-d069-4a76-bda2-4e5dec37ba1c  653cc650-a0c2-477c-b2ce-3c7fbe1a2fa3  6d101b5d-0f39-4be7-a216-2edd52d4de55  779ed963-1d31-4e68-8b9e-138bca5e53c2  7826ac24-d44c-4440-863e-bacf383d3f78  a498496e-119f-42e1-97e9-4540e8669eeb  ad309661-5d2d-435d-91bd-fbbead699f11  bcfd8aa8-3fbe-4d37-b7dc-43a84cc858f9  c40b00d8-3803-4dd8-900b-9b3f7794be90  c46f9878-3848-44b1-9aeb-b8e5f438f895  ca23b4fa-8ced-4658-9078-2838616c107c  cc62a482-5393-4272-acab-7197634b144f  d2549927-5053-442e-b4fc-e1186b3cd32e  d4e3c815-d05a-4875-802d-6b1569ea8c1e  df31d813-e33c-43d3-b5a4-293e5b3b090b  e1ec2d7e-ae3b-4111-8ce4-984d43b571be  efd62086-8a4d-461c-ae60-9c82fb1286da  f8f30858-181d-4d73-88f3-db509d7161bc
(+2 files in other folders)
